2006-04-27  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeview.c (node_is_visible): new function,
	(validate_visible_area): when a node is validated, only queue a
	redraw for that node, not for the entire widget (a redraw for the
	entire widget is only needed when the sizes change, and
	_queue_resize() will take care of that),
	(do_validate_rows): do not queue a redraw, redraws are only needed
	for changes in the visible area and validate_visible_area() takes
	care of that,
	(gtk_tree_view_row_inserted): for fixed height mode, only queue
	a resize and redraw if the node is visible, else no redraw is needed.
	N#25311

2006-04-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_popup,
	_gtk_entry_completion_popdown): Pop down the completion window if the
	GtkEntry moves, like what happens when the user hides the IM.

2006-04-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_popup,
	_gtk_entry_completion_popdown): Do not perform any grabs that are
	intended for closing the completion popup window when tapping outside
	as they effectively prevent VKB usage. Now we rely on focus-out
	to pop down the completion window.
	N#26867

2006-04-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentry.c (gtk_entry_set_property): setting visibility will
	manipulate the "hildon-input-mode" HILDON_GTK_INPUT_MODE_INVISIBILITY
	bit.
	* gtk/gtkentry.c (hildon_gtk_entry_set_input_mode): turn the visibility
	on/off according to the HILDON_GTK_INPUT_INVISIBILITY bit, by calling
	gtk_entry_set_real_visibility
	* gtk/gtkentry.c (gtk_entry_set_visibility): use set_property to
	change it visibility property
	* gtk/gtkentry.c (gtk_entry_set_real_visibility): this is a copy of
	the old gtk_entry_set_visibility
	N#23018

2006-04-24  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeviewcolumn.c
	(_gtk_tree_view_column_cell_set_cell_data_with_attributes): new